@startuml a

class tablaSimbolos{
    - List< Map <String, ID> > : simbolos
    + addContexto ()
    + delContexto ()
    + searchID (String) : ID
    + searchIDLocal (String) : ID
    + addID (ID)
}
interface List

interface Map

class ID< <abstract> >{
    - String id
    - TipoDato tipoDato
    - Boolean inicializado
    - Boolean usado
}

class Variable {}

class Funcion {
    - List <TipoDato> argumentos
}


enum TipoDato {
    VOID
    INT
    DOUBLE
}
tablaSimbolos --> List
tablaSimbolos -> ID
ID -> TipoDato
List --> Map
ID <|-- Variable
ID <|-- Funcion

@enduml